@startuml

title __CRICKETSCOREBOARD's Class Diagram__\n

  namespace com.avinash.cricketScoreboard {
    class com.avinash.cricketScoreboard.CricketMatch {
        - overs : int
        - playersPerTeam : int
        {static} + main()
        - calculateResults()
        - getPlayersAndOvers()
        - start()
        - stop()
    }
  }
  

  namespace com.avinash.cricketScoreboard {
    class com.avinash.cricketScoreboard.Player {
        - balls : int
        - currentScore : int
        - fours : int
        - isOut : boolean
        - name : String
        - sixes : int
        + getBalls()
        + getCurrentScore()
        + getFours()
        + getName()
        + getSixes()
        + isOut()
        + setBalls()
        + setCurrentScore()
        + setFours()
        + setName()
        + setOut()
        + setSixes()
        ~ Player()
    }
  }
  

  namespace com.avinash.cricketScoreboard {
    class com.avinash.cricketScoreboard.Team {
        - completedOvers : double
        - players : Player[]
        - teamNumber : int
        - totalOvers : int
        - totalPlayers : int
        - totalRuns : int
        - totalWickets : int
        + getTeamNumber()
        + getTotalRuns()
        ~ Team()
        ~ getPlayersDetails()
        ~ startPlaying()
        - printScoreForCurrentOver()
        - toggleStrike()
    }
  }
  

  com.avinash.cricketScoreboard.CricketMatch o-- com.avinash.cricketScoreboard.Team : team1
  com.avinash.cricketScoreboard.CricketMatch o-- com.avinash.cricketScoreboard.Team : team2
  com.avinash.cricketScoreboard.Team o-- com.avinash.cricketScoreboard.Player : nonstrikerPlayer
  com.avinash.cricketScoreboard.Team o-- com.avinash.cricketScoreboard.Player : strikerPlayer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
